<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Titles-->
    <string name="app_name">Snow Day Calculator</string>
    <string name="app_name_short">Snow Day</string>

    <!--About-->
    <string name="GBCS">Grand Blanc Community Schools</string>
    <string name="dev_name">Developed by Corey Rowe</string>

    <string name="dev_twitter">\@GBSnowDay</string>
    <string name="twitter_user">GBSnowDay</string>

    <string name="dev_site">Website</string>
    <string name="website">http://gbsnowday.weebly.com</string>

    <string name="dev_git">GitHub</string>
    <string name="git">http://github.com/CR96/SnowDayAndroid</string>

    <string name="dev_email">Email</string>
    <string name="email">gbsnowday@gmail.com</string>

    <!--License and Updates-->
    <string name="LicenseTitle">License Agreement</string>
    <string name="License">Copyright 2014-2016 Corey Rowe\n\nLicensed under the Apache
    License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the
    License.\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0
    \n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License
    is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed
    or implied.\nSee the License for specific language governing permissions and\nlimitations under
    the License.</string>

    <string name="UpdateTitle">What\'s New</string>
    <string name="Updates">•Fixed a bug caused by ABC 12\'s new closings system\n\n•Fixed an issue with the connection to NWS timing out intermittently for some users\n\nNew in Version 2.0:\n\n•Implemented Material design\n\n•Updated schedule and holidays for 2015–2016 school year\n\n•Added the ability to view detailed information about all weather alerts</string>

    <string name="Close">Close</string>

    <!--UI Views-->
    <string name="day">Run calculation for:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="prev">How many snow days have occurred?</string>
    <string-array name="days_array">
        <item>Select</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 or more</item>
    </string-array>

    <string name="special">Silence will fall when the question is asked.</string>

    <string name="calculate">CALCULATE</string>

    <string name="radarshow">Show Radar</string>
    <string name="radarhide">Hide Radar</string>

    <!--Menu-->
    <string name="openclosings">Open ABC 12 Closings</string>
    <string name="openweather">Open National Weather Service</string>
    <string name="action_about">About</string>
    <string name="action_info">More Info</string>

    <!--Tabs-->
    <string name="tab1">Percent</string>
    <string name="tab2">Closings</string>
    <string name="tab3">Weather</string>

    <!--Closings-->

    <string name="tier1">Academies / Institutions</string>
    <string name="tier2">Districts in Neighboring Counties</string>
    <string name="tier3">Districts in Genesee County</string>
    <string name="tier4">Districts near Grand Blanc</string>

    <string name="GB">Grand Blanc: "</string>
    <string name="GBAcademy">Grand Blanc Academy: "</string>
    <string name="HolyFamily">Holy Family: "</string>
    <string name="WPAcademy">Woodland Park Academy: "</string>
    <string name="GISD">Genesee I.S.D.: "</string>
    <string name="Durand">Durand: "</string>
    <string name="Holly">Holly: "</string>
    <string name="Lapeer">Lapeer: "</string>
    <string name="Owosso">Owosso: "</string>
    <string name="Beecher">Beecher: "</string>
    <string name="Clio">Clio: "</string>
    <string name="Davison">Davison: "</string>
    <string name="Fenton">Fenton: "</string>
    <string name="Flushing">Flushing: "</string>
    <string name="Genesee">Genesee: "</string>
    <string name="Kearsley">Kearsley: "</string>
    <string name="LKFenton">Lake Fenton: "</string>
    <string name="Linden">Linden: "</string>
    <string name="Montrose">Montrose: "</string>
    <string name="Morris">Mount Morris: "</string>
    <string name="SzCreek">Swartz Creek: "</string>
    <string name="Atherton">Atherton: "</string>
    <string name="Bendle">Bendle: "</string>
    <string name="Bentley">Bentley: "</string>
    <string name="Flint">Flint: "</string>
    <string name="Goodrich">Goodrich: "</string>
    <string name="Carman">Carman-Ainsworth: "</string>

    <string name="Open">"OPEN</string>
    <string name="NotClosed">"No current closures or delays."</string>

    <string name="NoConnection">Check your internet connection.</string>
    <string name="NoNetwork">Network communication issues</string>

    <!--Weather-->
    <string name="NWS">National Weather Service Warnings</string>

    <string name="HazardWeather">Hazardous Weather Outlook</string>
    <string name="SigWeather">Significant Weather Advisory</string>
    <string name="WinterAdvisory">Winter Weather Advisory</string>
    <string name="WinterWatch">Winter Storm Watch</string>
    <string name="WinterWarn">Winter Storm Warning</string>
    <string name="LakeSnowAdvisory">Lake-Effect Snow Advisory</string>
    <string name="LakeSnowWatch">Lake-Effect Snow Watch</string>
    <string name="Rain">Freezing Rain Advisory</string>
    <string name="Drizzle">Freezing Drizzle Advisory</string>
    <string name="Fog">Freezing Fog Advisory</string>
    <string name="WindChillAdvisory">Wind Chill Advisory</string>
    <string name="WindChillWatch">Wind Chill Watch</string>
    <string name="BlizzardWatch">Blizzard Watch</string>
    <string name="LakeSnowWarn">Lake-Effect Snow Warning</string>
    <string name="IceStorm">Ice Storm Warning</string>
    <string name="WindChillWarn">Wind Chill Warning</string>
    <string name="BlizzardWarn">Blizzard Warning</string>

    <!--Results / Conditions-->
    <string name="SchoolOpen">School is already in session.</string>
    <string name="Dismissed">School has already been dismissed.</string>

    <string name="SaturdayTomorrow">Tomorrow is Saturday.</string>
    <string name="SaturdayToday">Today is Saturday. Try again tomorrow!</string>
    <string name="SundayToday">Today is Sunday.</string>

    <string name="SnowDay">Enjoy your Snow Day!</string>

    <!--Dates and Holidays-->
    <string name="TomorrowGeneric">School is not in session tomorrow.</string>
    <string name="TodayGeneric">School is not in session today.</string>

    <string name="Thanksgiving">Happy Thanksgiving!</string>
    <string name="Christmas">Merry Christmas!</string>
    <string name="NewYear">Happy New Year!</string>
    <string name="Easter">Happy Easter!</string>

    <string name="YearStart">The 2016–2017 school year begins tomorrow!</string>
    <string name="YearEnd">Today is the last day of school!</string>

    <string name="HC">Happy Homecoming!</string>

    <string name="LSTomorrow">REMINDER: Tomorrow is a Late Start.</string>
    <string name="LSToday">REMINDER: Today is a Late Start.</string>

    <string name="HalfDayTomorrow">REMINDER: Tomorrow is a Half Day.</string>
    <string name="HalfDay">REMINDER: Today is a Half Day.</string>

    <string name="HalfDayConferenceMSTomorrow">REMINDER: Tomorrow is a Half Day for elementary and middle school students.</string>
    <string name="HalfDayConferenceMSTodayTomorrow">Today and Tomorrow are Half Days for elementary and middle school students.</string>
    <string name="HalfDayConferenceMSToday">REMINDER: Today is a Half Day for elementary and middle school students.</string>

    <string name="HalfDayHSTomorrow">REMINDER: Tomorrow is a Half Day for high school students.</string>
    <string name="HalfDayHSToday">REMINDER: Today is a Half Day for high school students.</string>

    <string name="ThanksgivingRecessTomorrow">Thanksgiving Recess begins tomorrow.</string>
    <string name="ThanksgivingRecess">Enjoy your Thanksgiving Recess!</string>

    <string name="WinterBreakTomorrow">Winter Break begins tomorrow.</string>
    <string name="WinterBreak">Enjoy your winter break!</string>

    <string name="GoodFridayTomorrow">Tomorrow is Good Friday.</string>
    <string name="GoodFriday">Today is Good Friday.</string>

    <string name="SpringBreakTomorrow">Spring Break begins tomorrow.</string>
    <string name="SpringBreak">Enjoy your spring break!</string>

    <string name="MLKTomorrow">Tomorrow is Martin Luther King Day.</string>
    <string name="MLK">Today is Martin Luther King Day.</string>

    <string name="RecordsTomorrow">Tomorrow is Staff Records Day.</string>
    <string name="Records">Today is Staff Records Day.</string>

    <string name="LincolnTomorrow">Tomorrow is Lincoln\'s Birthday.</string>
    <string name="Lincoln">Today is Lincoln\'s Birthday.</string>

    <string name="PresidentTomorrow">Tomorrow is President\'s Day.</string>
    <string name="President">Today is President\'s Day.</string>

    <string name="PDDTomorrow">Tomorrow is Staff Professional Development Day.</string>
    <string name="PDD">Today is Staff Professional Development Day.</string>

    <string name="MemorialDayTomorrow">Tomorrow is Memorial Day.</string>
    <string name="MemorialDay">Today is Memorial Day.</string>

    <string name="Senior">Congratulations Senior Class of 2017!</string>

    <string name="Summer">Enjoy your summer!</string>

    <string name="NoSessionTomorrow">" School will not be in session."</string>
    <string name="NoSessionToday">" School is not in session."</string>


    <!--Error handling-->
    <string name="CalculateError">Unable to run calculation.</string>

    <string name="WJRTConnectionError">Could not connect to ABC 12.</string>
    <string name="WJRTParseError">Unable to read ABC 12 closings.</string>

    <string name="WeatherConnectionError">Could not connect to National Weather Service.</string>
    <string name="WeatherParseError">Unable to read weather information.</string>
    <string name="WarningParseError">Error loading warning information.</string>

    <string name="EmptyTimeline">No Tweets</string>
    <string name="NoTwitter">Could not load timeline.</string>
    <string name="Retry">Retry</string>

</resources>
