<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.owner.snowday.snow_day"
    android:background="#ff34b5e5"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/day"
        android:id="@+id/txtDay"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:id="@+id/optToday"
        android:checked="true"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/txtDay"
        android:layout_alignParentLeft="true" />

    <RadioButton
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/tomorrow"
        android:id="@+id/optTomorrow"
        android:layout_gravity="center"
        android:checked="false"
        android:textColor="@android:color/white"
        android:layout_alignStart="@+id/optToday"
        android:layout_below="@+id/optToday"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prev"
        android:id="@+id/txtPrev"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/optTomorrow"
        android:layout_alignParentLeft="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtPrev"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btnCalculate"
        android:enabled="true"
        android:background="#ff2aa9d4"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
