<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.GBSnowDay.SnowDay.About"
    android:id="@+id/about">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgAbout"
        android:layout_gravity="center"
        android:src="@drawable/icon"
        android:contentDescription="@string/title"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GBCS"
        android:id="@+id/txtGB"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/txtSnowDay"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_above="@+id/imgAbout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dev_name"
        android:id="@+id/txtDev"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@+id/imgAbout"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/dev_site"
        android:id="@+id/txtWeb"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/dev_email"
        android:id="@+id/txtMail"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@+id/txtDev"
        android:layout_centerHorizontal="true"
        android:paddingBottom="16dp"/>
</RelativeLayout>
